# popss

./: .gitignore  app.manifest  build.ps1  export_objects.ps1  install_dependencies.ps1  readme.md
data/maps/: landscape.dark.xml  landscape.xml
data/objects/: hand.object  red_tower.object  red_tower_0.mtl  red_tower_0.object  tower_red.0.object  tower_red.object  tree0.object  tree1.object  tree2.object  tree3.object  unit.object  vok.object
data/shaders/: flat_object.frag  flat_object.vert  fog.frag  fog.vert  hand.frag  hand.vert  land.frag  land.geom  land.vert  land_wireframe.frag  landscape.glsl  lighting.glsl  object.frag  object.vert  sky.frag  sky.vert  solid.frag  water.frag  water.geom  water.vert
docs/: hotkeys.txt
projects/: CMakeLists.txt  makemac  makexCode  popss.sln  popss.vcxproj  popss.vcxproj.filters
raw/objects/: barracks_cyan.blend  hand.blend  tower_cyan.blend  tower_red.0.blend  tower_red.blend  tree_0.blend  tree_1.blend  tree_2.blend  unit.blend  vok.blend
src/: Audio.cpp  Audio.h  Camera.cpp  Camera.h  GameView.cpp  GameView.h  LandscapeRenderer.cpp  LandscapeRenderer.h  LightManager.cpp  LightManager.h  LightSource.h  LoadingScreen.cpp  LoadingScreen.h  Mesh.cpp  Mesh.h  ObjectRenderer.cpp  ObjectRenderer.h  OrcaShader.cpp  OrcaShader.h  Pathfinding.cpp  Pathfinding.h  PopSS.cpp  PopSS.h  SimpleVertexBuffer.hpp  SkyRenderer.cpp  SkyRenderer.h  TerrainStyle.cpp  TerrainStyle.h  Unit.cpp  Unit.h  VertexBuffer.cpp  VertexBuffer.h  World.cpp  World.h  WorldObject.cpp  WorldObject.h  glUtil.cpp  glUtil.h
src/Objects/: WorldObject.cpp  (+1 more)
(+18 files in other folders)
